Modified Block storage files, added file to delete resource after use

--- a/3_block.ipynb
+++ b/3_block.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "### Block storage using the Horizon GUI\n",
     "\n",
+    "To connect to our existing volume, skip to \"To connect our instance (or anything else) to the volume block\" as that will provide code to connect, but this section is all ClickOps.\n",
     "First, let’s try creating a block storage volume from the OpenStack Horizon GUI. Open the GUI for KVM@TACC:\n",
     "\n",
     "-   from the [Chameleon website](https://chameleoncloud.org/hardware/)\n",
@@ -156,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# To connect our instance (or anything else) to the volume block"
+    "# To connect our instance (or anything else) to the volume block - skip to this directly as things are all set up"
    ]
   },
   {
@@ -214,7 +215,7 @@
     "\n",
     "``` bash\n",
     "# run on node-persist\n",
-    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4 ) docker compose -f ~/data-persist-chi/docker/docker-compose-block.yaml up -d\n",
+    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4 ) docker compose -f ~/LLM_LegalDocSummarization/data_preprocessing/docker-compose-block.yaml up -d\n",
     "```\n",
     "\n",
     "In your browser, open the MLFlow service web UI at\n",
