Updated ssh key name

--- a/1_create_server.ipynb
+++ b/1_create_server.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,6 +60,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,6 +127,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,6 +220,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,6 +278,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -311,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -431,6 +438,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -438,13 +446,19 @@
     "\n",
     "Finally, open an SSH sesson on your server. From your local terminal, run\n",
     "\n",
-    "    ssh -i ~/.ssh/id_rsa_chameleon cc@A.B.C.D\n",
+    "    ssh -i ~/.ssh/id_project_group33 cc@A.B.C.D\n",
     "\n",
     "where\n",
     "\n",
-    "-   in place of `~/.ssh/id_rsa_chameleon`, substitute the path to your own key that you had uploaded to KVM@TACC\n",
+    "-   in place of `~/.ssh/id_project_group33`, substitute the path to your own key that you had uploaded to KVM@TACC\n",
     "-   in place of `A.B.C.D`, use the floating IP address you just associated to your instance."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
