--- a/1_create_server.ipynb
+++ b/1_create_server.ipynb
@@ -121,7 +121,7 @@
     "s = server.Server(\n",
     "    f\"node-persist-project33\", \n",
     "    image_name=\"CC-Ubuntu24.04\",\n",
-    "    flavor_name=\"m1.medium\"\n",
+    "    flavor_name=\"m1.large\"\n",
     ")\n",
     "s.submit(idempotent=True)"
    ]
