Cleaned and structured data pipeline code

--- a/data_pipeline/2_create_and_connect_to_object_store.ipynb
+++ b/data_pipeline/2_create_and_connect_to_object_store.ipynb
@@ -63,7 +63,7 @@
     "In your folder LLM_LegalDocSummarization (cd into it)\n",
     "\n",
     "````\n",
-    "cd ~/data_preprocessing\n",
+    "cd ~/data_pipeline\n",
     "````\n",
     "\n",
     "````\n",
