Added RAG to frontend

--- a/2_vector_db/RAG.ipynb
+++ b/2_vector_db/RAG.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -294,26 +294,36 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Dataset URL: https://www.kaggle.com/datasets/deepcontractor/supreme-court-judgment-prediction\n",
       "License(s): CC0-1.0\n",
-      "Downloading supreme-court-judgment-prediction.zip to /home/jovyan/legal_data/supreme_cp\n",
+      "Downloading supreme-court-judgment-prediction.zip to /home/jovyan/LLM_LegalDocSummarization/2_vector_db/rag_data\n",
       "  0%|                                               | 0.00/1.33M [00:00<?, ?B/s]\n",
-      "100%|███████████████████████████████████████| 1.33M/1.33M [00:00<00:00, 348MB/s]\n"
+      "100%|███████████████████████████████████████| 1.33M/1.33M [00:00<00:00, 373MB/s]\n"
      ]
     }
    ],
    "source": [
     "# create the directory in Python\n",
     "import os\n",
-    "os.makedirs(os.path.expanduser('~/legal_data/supreme_cp'), exist_ok=True)\n",
+    "os.makedirs(os.path.expanduser('~/LLM_LegalDocSummarization/2_vector_db/rag_data'), exist_ok=True)\n",
     "\n",
     "# then call kaggle via the ! magic\n",
     "!kaggle datasets download \\\n",
     "  -d deepcontractor/supreme-court-judgment-prediction \\\n",
-    "  -p ~/legal_data/supreme_cp \\\n",
+    "  -p ~/LLM_LegalDocSummarization/2_vector_db/rag_data \\\n",
     "  --unzip"
    ]
   },
@@ -329,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded: /home/jovyan/legal_data/supreme_cp/justice.csv\n",
+      "Loaded: /home/jovyan/LLM_LegalDocSummarization/2_vector_db/rag_data/justice.csv\n",
       "Total rows: 3303\n",
       "Columns: ['Unnamed: 0', 'ID', 'name', 'href', 'docket', 'term', 'first_party', 'second_party', 'facts', 'facts_len', 'majority_vote', 'minority_vote', 'first_party_winner', 'decision_type', 'disposition', 'issue_area']\n"
      ]
@@ -393,7 +403,7 @@
        "2  Giglio v. United States  <p>John Giglio was convicted of passing forged..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +413,7 @@
     "import pandas as pd\n",
     "\n",
     "# Expand '~' to /home/jovyan\n",
-    "DATA_DIR = os.path.expanduser('~/legal_data/supreme_cp')\n",
+    "DATA_DIR = os.path.expanduser('~/LLM_LegalDocSummarization/2_vector_db/rag_data')\n",
     "\n",
     "# Sanity check\n",
     "assert os.path.isdir(DATA_DIR), f\"Directory not found: {DATA_DIR}\"\n",
@@ -436,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -449,7 +459,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Writing RAG texts: 100%|██████████| 3303/3303 [00:01<00:00, 3237.39it/s]\n"
+      "Writing RAG texts: 100%|██████████| 3303/3303 [00:01<00:00, 2894.06it/s]\n"
      ]
     }
    ],
@@ -460,12 +470,13 @@
     "from tqdm import tqdm\n",
     "\n",
     "# 1) Load the CSV\n",
-    "BASE_DIR   = os.path.expanduser('~/legal_data/supreme_cp')\n",
-    "csv_path = os.path.join(BASE_DIR, 'justice.csv')\n",
+    "BASE_DIR   = os.path.expanduser('~/LLM_LegalDocSummarization/2_vector_db/')\n",
+    "DATA_DIR = os.path.expanduser('~/LLM_LegalDocSummarization/2_vector_db/rag_data')\n",
+    "csv_path = os.path.join(DATA_DIR, 'justice.csv')\n",
     "df = pd.read_csv(csv_path)\n",
     "\n",
     "# 2) Prepare output directory\n",
-    "OUT_DIR    = os.path.join(BASE_DIR, 'rag_txt')   \n",
+    "OUT_DIR    = os.path.join(DATA_DIR, 'rag_txt')   \n",
     "os.makedirs(OUT_DIR, exist_ok=True)\n",
     "\n",
     "# 3) Cleaning function\n",
@@ -508,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -565,62 +576,6 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16177b434e5c406e98775cb108530721",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f3c9a902a384175aa489a8a1f8f326a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72fe1723a5574c2798b61cfd33c462f7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ff7041cc1d348ab8c77f3824b9a4262",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -631,7 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished chunking. Chunks are in: '/home/jovyan/legal_data/supreme_cp/rag_chunks'\n"
+      "Finished chunking. Chunks are in: '/home/jovyan/LLM_LegalDocSummarization/2_vector_db/rag_data/rag_chunks'\n"
      ]
     }
    ],
@@ -640,7 +595,7 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "# text files from previous step\n",
-    "CHUNK_DIR  = os.path.join(BASE_DIR, 'rag_chunks')   # where chunks will go\n",
+    "CHUNK_DIR  = os.path.join(DATA_DIR, 'rag_chunks')   # where chunks will go\n",
     "\n",
     "# 2) Make sure the chunk output directory exists\n",
     "os.makedirs(CHUNK_DIR, exist_ok=True)\n",
@@ -701,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "id": "bV_SRY3H-qGm"
    },
@@ -710,8 +665,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved FAISS index to: '/home/jovyan/legal_data/supreme_cp/model_rag/legal-facts.index'\n",
-      "Saved metadata mapping to: '/home/jovyan/legal_data/supreme_cp/model_rag/index_to_chunk.pkl'\n"
+      "Saved FAISS index to: '/home/jovyan/LLM_LegalDocSummarization/2_vector_db/model_rag/legal-facts.index'\n",
+      "Saved metadata mapping to: '/home/jovyan/LLM_LegalDocSummarization/2_vector_db/model_rag/index_to_chunk.pkl'\n"
      ]
     }
    ],
@@ -748,7 +703,7 @@
     "\n",
     "# Save the FAISS index and the metadata mapping\n",
     "index_path = os.path.join(MODEL_DIR, \"legal-facts.index\")\n",
-    "meta_path  = os.path.join(MODEL_DIR, \"index_to_chunk.pkl\")\n",
+    "meta_path  = os.path.join(MODEL_DIR, \"index_to_doc.pkl\")\n",
     "\n",
     "faiss.write_index(index, index_path)\n",
     "with open(meta_path, \"wb\") as f:\n",
@@ -770,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {
     "id": "Hgw5ce5k_FtF"
    },
@@ -790,7 +745,7 @@
     "import pickle\n",
     "\n",
     "INDEX_PATH   = os.path.join(MODEL_DIR, \"legal-facts.index\")\n",
-    "MAPPING_PATH = os.path.join(MODEL_DIR, \"index_to_chunk.pkl\")\n",
+    "MAPPING_PATH = os.path.join(MODEL_DIR, \"index_to_doc.pkl\")\n",
     "\n",
     "# Load the FAISS index\n",
     "index = faiss.read_index(INDEX_PATH)\n",
@@ -815,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -854,7 +809,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "INDEX_PATH     = os.path.join(MODEL_DIR, \"legal-facts.index\")\n",
-    "MAPPING_PATH   = os.path.join(MODEL_DIR, \"index_to_chunk.pkl\")\n",
+    "MAPPING_PATH   = os.path.join(MODEL_DIR, \"index_to_doc.pkl\")\n",
     "EMB_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
     "\n",
     "# FAISS index\n",
@@ -908,15 +863,6 @@
     "        print(f\"ID {res['idx']} (chunk {res['chunk_id']}, score {res['score']:.3f}):\")\n",
     "        print(res[\"text\"][:300].replace(\"\\n\", \" \"), \"...\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vs4Oq-wxDCwj"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
